--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,8 @@
         android:paddingVertical="5dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pageTitle">
+        app:layout_constraintTop_toBottomOf="@+id/pageTitle"
+        tools:layout_editor_absoluteX="87dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -60,7 +59,7 @@
                 android:id="@+id/className"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:paddingVertical="5dp"
                 android:text="Software Engineering"
                 android:textColor="@color/secondary_secondary"
                 android:textFontWeight="700"
@@ -75,7 +74,6 @@
                 android:id="@+id/semesterName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
                 android:gravity="end"
                 android:text="Fall '20"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -100,10 +98,9 @@
                 android:id="@+id/courseSchedule"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
-                android:text="TuThu from 10:45PM to 12:00PM"
+                android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/semesterName"
                 app:layout_constraintHorizontal_bias="0.036"
