added course page with course details

--- a/app/src/main/res/layout/activity_course_page.xml
+++ b/app/src/main/res/layout/activity_course_page.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:titleEnabled="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
@@ -28,6 +27,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                app:title="Helo"
                 app:layout_collapseMode="pin"
                 app:navigationIcon="@drawable/abc_vector_test"
                 app:popupTheme="@style/Theme.CollegeHub.PopupOverlay" />
