--- a/app/src/main/res/layout/activity_course_page.xml
+++ b/app/src/main/res/layout/activity_course_page.xml
@@ -19,6 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            app:menu="@menu/top_app_bar"
+
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
@@ -27,7 +29,6 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="Helo"
                 app:layout_collapseMode="pin"
                 app:navigationIcon="@drawable/abc_vector_test"
                 app:popupTheme="@style/Theme.CollegeHub.PopupOverlay" />
