--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -112,6 +112,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/profWebsiteCotainer" />
 
+        <Button
+            android:id="@+id/button"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="59dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="20dp"
+            android:backgroundTintMode="add"
+            app:icon="@android:drawable/ic_menu_add"
+            app:iconTint="@color/secondary_secondary"
+            app:layout_constraintBottom_toTopOf="@+id/assignmentOneContainer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/scheduleTitleText"
+            app:layout_constraintTop_toBottomOf="@+id/profWebsiteCotainer"
+            app:layout_constraintVertical_bias="1.0" />
+
         <androidx.cardview.widget.CardView
             android:id="@+id/assignmentOneContainer"
             android:layout_width="match_parent"
